solo quedan warnings por callbacks de ventanas

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -86,9 +86,9 @@ separator {
   font-size: 1.1rem;
 }
 
-// Nerd Font icons - must use a Nerd Font family to render icons
+
 .nerd-icon {
-  font-family: "FiraCode Nerd Font";
+  font-family: "Symbols Nerd Font";
   font-size: 1.3rem;
   min-width: 1.3rem;
   min-height: 1.3rem;
