--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,3 +10,4 @@
 @use "./widgets/battery.scss";
 @use "./widgets/audio.scss";
 @use "./widgets/wallpaperpicker.scss";
+@use "./widgets/kanban.scss";
