todo funciona parcialmente bien 2

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,3 +11,4 @@
 @use "./widgets/audio.scss";
 @use "./widgets/wallpaperpicker.scss";
 @use "./widgets/kanban.scss";
+@use "./widgets/sysinfo.scss";
